fix(material-experimental/mdc-form-field): fix fill appearance contrast ratio (#21365)

--- a/src/material-experimental/mdc-form-field/_mdc-text-field-theme-variable-refresh.scss
+++ b/src/material-experimental/mdc-form-field/_mdc-text-field-theme-variable-refresh.scss
@@ -21,7 +21,7 @@
   $_mdc-text-field-focused-label-color: $mdc-text-field-focused-label-color;
   $mdc-text-field-focused-label-color: rgba(theme-variables.prop-value(primary), 0.87) !global;
   $_mdc-text-field-placeholder-ink-color: $mdc-text-field-placeholder-ink-color;
-  $mdc-text-field-placeholder-ink-color: rgba(theme-variables.prop-value(on-surface), 0.54) !global;
+  $mdc-text-field-placeholder-ink-color: rgba(theme-variables.prop-value(on-surface), 0.6) !global;
   $_mdc-text-field-disabled-label-color: $mdc-text-field-disabled-label-color;
   $mdc-text-field-disabled-label-color: rgba(theme-variables.prop-value(on-surface), 0.38) !global;
   $_mdc-text-field-disabled-ink-color: $mdc-text-field-disabled-ink-color;
